# directx12-seed

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
assets/: triangle.frag.dxbc  triangle.frag.hlsl  triangle.vert.dxbc  triangle.vert.hlsl
src/: Main.cpp  Renderer.cpp  Renderer.h
